--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Titulo de la web</title>
     </head>
     <body>
-        <h1> MI primera pagina web </h1>
+        <h1> My first website</h1>
         <p>Ya estamos online!</p>
     </body>
 </html>
