--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1> My first website</h1>
-        <p>Ya estamos online!</p>
+        <p>We're allready online!</p>
     </body>
 </html>
